    depend and symlink to the packaged versions.
  * Add sphinx_mathjax_location.patch: point at the local filesystem
    path of the mathjax javascript, to avoid a privacy breach when opening
    the docs in a browser.
  * Add Depends on libjs-sphinxdoc and libjs-mathjax.
  * Register the html docs with doc-base.
  * Remove obsolete reference to MESS in mame-tools' description.

 -- Jordi Mallach <jordi@debian.org>  Wed, 28 Sep 2016 08:07:12 +0200

mame (0.177-1) unstable; urgency=medium

  * New upstream release.
  * Drop x32.patch, merged upstream.
  * Adapt packaging to massive upstream docs rewrite.
  * Install whatsnew.txt as upstream changelog.
  * Enable all hardening options.
  * Add the non-minified version of modernizr.js to d/missing-sources,
    taken from the modernizr-2.6.2+ds1-1 Debian source package.

 -- Jordi Mallach <jordi@debian.org>  Tue, 27 Sep 2016 18:15:28 +0200

mame (0.176-3) unstable; urgency=medium

  * Drop Build-Depends on subversion, nothing uses it these days, and it
    was actually only necessary for get-orig-source target.
  * Add x32.patch: fix incorrect detection of 64 bit architecture in
    rapidjson, adding a check for __x86_64__ && __ILP32__, to fix a
    build error on x32.

 -- Jordi Mallach <jordi@debian.org>  Thu, 18 Aug 2016 18:13:13 +0200

mame (0.176-2) unstable; urgency=medium

  * Brown paper bag time: fix perms for /etc/mame contents in
    override_dh_fixperms-arch, to fix arch:all builds.

 -- Jordi Mallach <jordi@debian.org>  Thu, 28 Jul 2016 08:45:37 +0200

mame (0.176-1) unstable; urgency=medium

  [ Jordi Mallach ]
  * New upstream release.
    - Includes Steven Chamberlain's kfreebsd fixes for several build errors
      on kfreebsd-*. Many thanks! (closes: #830974)
    - Includes fixes for ppc64el builds (closes: #825483).
  * Install bgfx, language, plugins and uismall.bdf files in mame-data.
    Thanks to Vas Crabb for pointing this out.